@@ -60,6 +60,21 @@
   background-color: @side-bar-element-active-bg-color;
 }
 
+.status-bar__license--unlicensed{
+  .status-bar__license;
+  cursor: initial;
+  padding: 0px 20px; 
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+}
+.status-bar__license--unlicensed:hover,
+.status-bar__license--unlicensed:active{
+    background-color: none; 
+}
+
 .status-bar__icon--menu{
   cursor: pointer;
   width: 60px;
