@@ -14,6 +14,8 @@ Changes
 Fixes
 =====
 
+ - Licence ident wording has been corrected.
+
 2017/04/18 1.3.0
 ================
 
